--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kcalcular</title>
+
+    <link rel="stylesheet" href="/assets/styles/style.css">
+    <script src="https://kit.fontawesome.com/0c13b055a7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
+    <main class="content">
+        <header class="logo">
+            <div class="gradient">
+                <h1>kcalcular</h1>
+            </div>
+        </header>
+        
+        <div class="form-container">
+            <form id="form">
+                <div class="form-set">
+                    <label for="gender">Gênero</label>
+                    <select id="gender">
+                        <option value="masculine">Masculino</option>
+                        <option value="feminine">Feminino</option>
+                    </select>
+                </div>
+                <div class="form-set">
+                    <label for="age">Idade</label>
+                    <input type="number" id="age">
+                </div>
+                <div class="form-set">
+                    <label for="weight">Peso</label>
+                    <input type="number" id="weight" placeholder="Em kg">
+                </div>
+                <div class="form-set">
+                    <label for="height">Altura</label>
+                    <input type="number" id="height" placeholder="Em cm">
+                </div>
+                <div class="form-set">
+                    <label for="activity_level">Nível de atividade física</label>
+                    <select id="activity_level">
+                        <option value="1.2">Sedentário</option>
+                        <option value="1.375">Pouca atividade</option>
+                        <option value="1.55">Atividade moderada</option>
+                        <option value="1.725">Atividade intensa</option>
+                        <option value="1.9">Atividade muito intensa</option>
+                        <option value="3.7">Saitama</option> <!-- Não leve isso a sério! -->
+                    </select>
+                </div>
+
+                <div class="form-set">
+                    <button type="submit"><span>k</span>Calcular</button>
+                </div>
+            </form>
+        </div>
+        <div class="result-container" id="results">
+            <ul>
+                <li>
+                    blablabla <strong>blabla</strong>.
+                </li>
+                <li>
+                    eita eita <strong>eita eita</strong>.
+                </li>
+            </ul>
+        </div>
+    </main>
+
+    <footer>
+        <div class="by">
+            <p>Por Luís Felipe</p>
+        </div>
+        <i class="fa-solid fa-circle" id="separator"></i>
+        <div class="contacts">
+            <a href="https://github.com/Felipstein" target="_blank" id="github">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/lu%C3%ADs-felipe-oliveira-reginaldo-44321a203/" target="_blank" id="linkedin">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </div>
+    </footer>
+
 </body>
 </html>
