--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>kcalcular</title>
 
     <link rel="stylesheet" href="/assets/styles/style.css">
-    <script src="https://kit.fontawesome.com/0c13b055a7.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/0c13b055a7.js" crossorigin="anonymous"></script> -->
 </head>
 <body>
     
@@ -56,15 +56,11 @@
                 </div>
             </form>
         </div>
-        <div class="result-container" id="results">
-            <ul>
-                <li>
-                    blablabla <strong>blabla</strong>.
-                </li>
-                <li>
-                    eita eita <strong>eita eita</strong>.
-                </li>
-            </ul>
+        <div class="result-container">
+            <div class="waiting">
+                <h2>Aguardando os dados... <span id="waiting-logo"></span></h2>
+            </div>
+            <div id="results"></div>
         </div>
     </main>
 
@@ -82,6 +78,8 @@
             </a>
         </div>
     </footer>
+
+    <script src="/assets/scripts/index.js" type="text/javascript"></script>
 
 </body>
 </html>
