--- a/index.html
+++ b/index.html
@@ -20,37 +20,43 @@
         
         <div class="form-container">
             <form id="form">
-                <div class="form-set">
-                    <label for="gender">Gênero</label>
-                    <select id="gender">
-                        <option value="masculine">Masculino</option>
-                        <option value="feminine">Feminino</option>
-                    </select>
-                </div>
-                <div class="form-set">
-                    <label for="age">Idade</label>
-                    <input type="number" id="age">
-                </div>
-                <div class="form-set">
-                    <label for="weight">Peso</label>
-                    <input type="number" id="weight" placeholder="Em kg">
-                </div>
-                <div class="form-set">
-                    <label for="height">Altura</label>
-                    <input type="number" id="height" placeholder="Em cm">
-                </div>
-                <div class="form-set">
-                    <label for="activity_level">Nível de atividade física</label>
-                    <select id="activity_level">
-                        <option value="1.2">Sedentário</option>
-                        <option value="1.375">Pouca atividade</option>
-                        <option value="1.55">Atividade moderada</option>
-                        <option value="1.725">Atividade intensa</option>
-                        <option value="1.9">Atividade muito intensa</option>
-                        <option value="3.7">Saitama</option> <!-- Não leve isso a sério! -->
-                    </select>
+                <div class="inputs">
+                    <div class="form-set">
+                        <label for="gender">Gênero</label>
+                        <select id="gender">
+                            <option value="masculine">Masculino</option>
+                            <option value="feminine">Feminino</option>
+                        </select>
+                    </div>
+                    <div class="form-set">
+                        <label for="age">Idade</label>
+                        <input type="number" id="age">
+                    </div>
+                    <div class="form-set">
+                        <label for="weight">Peso</label>
+                        <input type="number" id="weight" placeholder="Em kg">
+                    </div>
+                    <div class="form-set">
+                        <label for="height">Altura</label>
+                        <input type="number" id="height" placeholder="Em cm">
+                    </div>
+                    <div class="form-set">
+                        <label for="activity_level">Nível de atividade física</label>
+                        <select id="activity_level">
+                            <option value="1.2">Sedentário</option>
+                            <option value="1.375">Pouca atividade</option>
+                            <option value="1.55">Atividade moderada</option>
+                            <option value="1.725">Atividade intensa</option>
+                            <option value="1.9">Atividade muito intensa</option>
+                            <option value="3.7">Saitama</option> <!-- Não leve isso a sério! -->
+                        </select>
+                    </div>
                 </div>
 
+                <div id="output_info">
+                    <p>Preencha os campos restantes destacados em <strong>vermelho</strong></p>
+                </div>
+                
                 <div class="form-set">
                     <button type="submit"><span>k</span>Calcular</button>
                 </div>
